toolchain/internal/core/analysis/testdata/errors/naming/proc_not_pascal.vdl
// fmt:off
// @expect: E101

rpc Users {
	proc getUser {
		input { id: string }
		output { name: string }
	}
}
